--- a/nomouse-spring/src/main/webapp/WEB-INF/web.xml
+++ b/nomouse-spring/src/main/webapp/WEB-INF/web.xml
@@ -71,5 +71,17 @@
         <error-code>500</error-code>
         <location>/WEB-INF/views/error/500.jsp</location>
     </error-page>
+    <error-page>
+        <error-code>400</error-code>
+        <location>/WEB-INF/views/error/500.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/views/error/500.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/error/500.jsp</location>
+    </error-page>
 
 </web-app>
