--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 		maven {
 			url "http://localhost:8081/nexus/content/groups/public"
 		}
+        mavenCentral()
 	}
 }
 
@@ -15,6 +16,7 @@ subprojects {
         maven {
             url "http://localhost:8081/nexus/content/groups/public"
         }
+        mavenCentral()
     }
 
     compileJava {
