--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		maven {
 			url "http://localhost:8081/nexus/content/groups/public"
 		}
-        mavenCentral()
+        jcenter()
 	}
 }
 
@@ -16,7 +16,7 @@ subprojects {
         maven {
             url "http://localhost:8081/nexus/content/groups/public"
         }
-        mavenCentral()
+        jcenter()
     }
 
     compileJava {
