--- a/nomouse-spring/src/main/resources/application.properties
+++ b/nomouse-spring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #mysql database settings
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.0.38:3314/wuch?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
-jdbc.username=wuch
+jdbc.url=jdbc:mysql://192.168.0.38:3306/test
+jdbc.username=test
 jdbc.password=123456
 
 #connection pool settings
