--- a/nomouse-spring/src/main/webapp/WEB-INF/web.xml
+++ b/nomouse-spring/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,14 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>nomouse-spring</display-name>
+    <display-name>lianxi-queen</display-name>
 
     <!-- Spring ApplicationContext配置文件的路径,可使用通配符，用于后面的Spring Context Loader -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath*:/applicationContext.xml
-            classpath*:/applicationContext-nomouse.xml
+            classpath*:/applicationContext-queen.xml
         </param-value>
     </context-param>
 
@@ -22,7 +22,7 @@
 
     <!--Spring ApplicationContext 载入 -->
     <listener>
-        <listener-class>nomouse.spring.context.SpringContextLoaderListener</listener-class>
+        <listener-class>com.lianxi.queen.context.SpringContextLoaderListener</listener-class>
     </listener>
 
     <!-- Spring MVC Servlet -->
@@ -62,7 +62,7 @@
     </filter-mapping>
 
     <!-- 出错页面定义
-    -->
+
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
         <location>/WEB-INF/views/error/500.jsp</location>
@@ -83,5 +83,5 @@
         <error-code>404</error-code>
         <location>/WEB-INF/views/error/500.jsp</location>
     </error-page>
-
+-->
 </web-app>
