--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#Ignore files
+#Common
 *.java.hsp
 *.sonarj
 *.sw*
@@ -8,25 +8,41 @@
 bin
 build.sh
 integration-repo
-ivy-cache
 jxl.log
 jmx.log
 derby.log
-spring-test/test-output/
 argfile*
-pom.xml
 activemq-data/
-#.gradle
 
 /build
 buildSrc/build
-/spring-*/build
+/nomouse-*/build
+nomouse-test/test-output/
 /src/asciidoc/build
 target/
+ivy-cache
+
+#Ant
+build.xml
+
+#Maven
+target
+release.properties
+pom.xml.*
+
+#Gradle
+#.gradle
+
+#Android generated
+bin
+gen
+local.properties
+proguard-project.txt
 
 # Eclipse artifacts, including WTP generated manifests
 .classpath
 .project
+.settings
 spring-*/src/main/java/META-INF/MANIFEST.MF
 
 # IDEA artifacts and output dirs
@@ -38,3 +54,4 @@ out
 test-output
 atlassian-ide-plugin.xml
 .gradletasknamecache
+classes
