--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
-	repositories {
-		maven {
-			url "http://localhost:8081/nexus/content/groups/public"
-		}
+    repositories {
+        maven {
+            url "http://localhost:8081/nexus/content/groups/public"
+        }
         jcenter()
-	}
+    }
 }
 
 subprojects {
-    apply plugin: 'java'
-    apply plugin: 'eclipse'
-    apply plugin: 'idea'
+    apply plugin: "java"
+    apply plugin: "eclipse"
+    apply plugin: "idea"
 
     repositories {
         maven {
@@ -20,8 +20,8 @@ subprojects {
     }
 
     compileJava {
-        sourceCompatibility=1.7
-        targetCompatibility=1.7
+        sourceCompatibility = 1.7
+        targetCompatibility = 1.7
         options*.encoding = "UTF-8"
     }
 
@@ -38,10 +38,9 @@ subprojects {
         logbackVersion = "1.1.2"
 
         jacksonVersion = "2.4.1"
-
         httpClientVersion = "4.3.5"
-
         jUnitVersion = "4.11"
+        guavaVersion = ""
 
         mysqlJdbcVersion = "5.1.24"
 
@@ -75,6 +74,8 @@ subprojects {
         compile("ch.qos.logback:logback-classic:${logbackVersion}")
 
         compile("org.apache.commons:commons-lang3:3.3.2")
+        compile("commons-io:commons-io:2.4")
+        compile("com.google.guava:guava:17.0")
 
         compile("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
         compile("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
