--- a/nomouse-spring/build.gradle
+++ b/nomouse-spring/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'war'
-apply plugin: 'jetty'
+apply plugin: "war"
+apply plugin: "jetty"
 
 dependencies {
-    compile project(':nomouse-common')
+    compile project(":nomouse-core")
+
+    compile("commons-fileupload:commons-fileupload:1.3.1")
 
     compile("mysql:mysql-connector-java:${mysqlJdbcVersion}")
     compile("org.apache.tomcat:tomcat-jdbc:${tomcatJdbcVersion}")
