--- a/nomouse-spring/src/main/resources/META-INF/config/application.devlopment.properties
+++ b/nomouse-spring/src/main/resources/META-INF/config/application.devlopment.properties
@@ -1,7 +1,7 @@
 #mysql database settings
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.0.38:3306/test
-jdbc.username=test
+jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.username=root
 jdbc.password=123456
 
 #connection pool settings
