--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,18 @@
-buildscript {
-    repositories {
-        maven {
-            url "http://localhost:8081/nexus/content/groups/public"
-        }
-        jcenter()
-    }
-}
-
 subprojects {
-    apply plugin: "java"
-    apply plugin: "eclipse"
-    apply plugin: "idea"
+
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
 
     repositories {
         maven {
             url "http://localhost:8081/nexus/content/groups/public"
         }
-        jcenter()
+        mavenCentral()
+    }
+
+    jar {
+        manifest.attributes provider: 'common'
     }
 
     compileJava {
@@ -25,57 +21,71 @@ subprojects {
         options*.encoding = "UTF-8"
     }
 
-    javadoc {
-        options.encoding = "UTF-8"
-    }
-
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
     }
 
+    javadoc {
+        options.encoding = "UTF-8"
+    }
+
     ext {
+        commonsLang3Version = "3.3.2"
+        commonsIoVersion = "2.4"
+        commonsCodecVersion = "1.10"
+        commonsFileuploadVersion = "1.3.1"
+
         slf4jVersion = "1.7.7"
         logbackVersion = "1.1.2"
-
-        jacksonVersion = "2.4.1"
+        guavaVersion = "17.0"
+        jacksonVersion = "2.4.5"
         httpClientVersion = "4.3.5"
-        jUnitVersion = "4.11"
-        guavaVersion = ""
 
         mysqlJdbcVersion = "5.1.24"
+        log4jdbcVersion = "1.2"
+        p6spyVersion = "2.1.3"
 
+        springVersion = "3.2.10.RELEASE"
+        aspectjVersion = "1.8.0"
+
+        springJpaVersion = "1.6.1.RELEASE"
         hibernateVersion = "3.6.10.Final"
-        hibernateJpaVersion = "1.0.1.Final"
+
+        springMybatisVersion = "1.2.2"
+        mybatisVersion = "3.2.3"
+
+        springSolrVersion = "1.2.4.RELEASE"
+        springMongodbVersion = "1.5.4.RELEASE"
+        springRedisVersion = "1.3.4.RELEASE"
+
         hibernateValidatorVersion = "4.3.2.Final"
 
-        jedisVersion = "2.5.1"
-
-        mongodbVersion = "2.12.3"
-
         solrjVersion = "4.7.2"
-
+        mongodbVersion = "2.12.5"
+        jedisVersion = "2.4.1"
         memcachedVersion = "3.0.2"
 
-        springVersion = "3.2.9.RELEASE"
-        springJpaVersion = "1.6.1.RELEASE"
-        springRedisVersion = "1.3.1.RELEASE"
-        springMongodbVersion = "1.5.2.RELEASE"
-        springSolrVersion = "1.2.4.RELEASE"
+        tomcatVersion = "7.0.55"
 
-        tomcatJdbcVersion = "7.0.55"
         jerseyVersion = "2.11"
 
         jettyVersion = "8.1.16.v20140903"
 
+        protostuffVersion = "1.0.9"
+
+        junitVersion = "4.11"
     }
 
     dependencies {
         compile("org.slf4j:slf4j-api:${slf4jVersion}")
+        compile("org.slf4j:jcl-over-slf4j:${slf4jVersion}")
+        compile("org.slf4j:jul-to-slf4j:${slf4jVersion}")
+
         compile("ch.qos.logback:logback-classic:${logbackVersion}")
 
-        compile("org.apache.commons:commons-lang3:3.3.2")
-        compile("commons-io:commons-io:2.4")
-        compile("com.google.guava:guava:17.0")
+        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
+
+        compile("com.google.guava:guava:${guavaVersion}")
 
         compile("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
         compile("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
@@ -84,6 +94,10 @@ subprojects {
         compile("org.apache.httpcomponents:httpclient:${httpClientVersion}")
         compile("org.apache.httpcomponents:httpmime:${httpClientVersion}")
 
-        testCompile("junit:junit:${jUnitVersion}")
+        testCompile("junit:junit:${junitVersion}")
     }
-}
+
+    configurations {
+        all*.exclude group: "commons-logging", module: "commons-logging"
+    }
+} 
