--- a/nomouse-core/build.gradle
+++ b/nomouse-core/build.gradle
@@ -1,16 +1,19 @@
 dependencies {
+    compile("commons-codec:commons-codec:${commonsCodecVersion}")
+    compile("commons-io:commons-io:${commonsIoVersion}")
+
+    //SPRING basic/email/scheduler/freemarker
     compile("org.springframework:spring-context-support:${springVersion}")
+
+    compile("org.aspectj:aspectjrt:${aspectjVersion}")
+    compile("org.aspectj:aspectjweaver:${aspectjVersion}")
 
     compile("org.springframework:spring-aop:${springVersion}")
     compile("org.springframework:spring-tx:${springVersion}")
     compile("org.springframework:spring-jdbc:${springVersion}")
     compile("org.springframework:spring-orm:${springVersion}")
 
-    compile("org.springframework.data:spring-data-jpa:${springJpaVersion}")
-    compile("org.hibernate:hibernate-core:${hibernateVersion}")
-    compile("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
-    compile("org.hibernate.javax.persistence:hibernate-jpa-2.0-api:${hibernateJpaVersion}")
+    compile("org.springframework.data:spring-data-redis:${springRedisVersion}")
+    compile("redis.clients:jedis:${jedisVersion}")
 
-    //compile("redis.clients:jedis:${jedisVersion}")
-    //compile("org.springframework.data:spring-data-redis:${springRedisVersion}")
 }
