--- a/nomouse-demo/src/main/resources/META-INF/application.dev.properties
+++ b/nomouse-demo/src/main/resources/META-INF/application.dev.properties
@@ -1,8 +1,8 @@
 #mysql database settings
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.url=jdbc:mysql://192.168.100.38:3306/test
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=lianxi2015!
 
 #connection pool settings
 jdbc.pool.maxIdle=10
