--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ subprojects {
     }
 
     jar {
-        manifest.attributes provider: 'common'
+        manifest.attributes provider: 'global'
     }
 
     compileJava {
@@ -34,39 +34,43 @@ subprojects {
         commonsIoVersion = "2.4"
         commonsCodecVersion = "1.10"
         commonsFileuploadVersion = "1.3.1"
+        commonsCollectionVersion = "3.2.1"
 
-        slf4jVersion = "1.7.7"
+        slf4jVersion = "1.7.12"
         logbackVersion = "1.1.2"
         guavaVersion = "17.0"
-        jacksonVersion = "2.4.5"
+        jacksonVersion = "2.6.2"
         httpClientVersion = "4.3.5"
 
         mysqlJdbcVersion = "5.1.24"
         log4jdbcVersion = "1.2"
 
-        aspectjVersion = "1.8.0"
-        springVersion = "3.2.10.RELEASE"
-        hibernateValidatorVersion = "4.3.2.Final"
+        aspectjVersion = "1.8.6"
+        springVersion = "4.1.7.RELEASE"
+        hibernateValidatorVersion = "5.1.3.Final"
 
-        springJpaVersion = "1.6.1.RELEASE"
+        springJpaVersion = "1.9.0.RELEASE"
         hibernateVersion = "3.6.10.Final"
 
-        springMybatisVersion = "1.2.2"
-        mybatisVersion = "3.2.3"
+        springMybatisVersion = "1.2.3"
+        mybatisVersion = "3.3.0"
+
+        ehcacheVersion = "2.6.9"
+        ehcacheMybatisVersion = "1.0.0"
+
+        activemqVersion = "5.7.0"
+
+        kafkaVersion = "0.8.2.1"
 
         springSolrVersion = "1.2.4.RELEASE"
         springMongodbVersion = "1.5.4.RELEASE"
-        springRedisVersion = "1.3.4.RELEASE"
+        springRedisVersion = "1.6.0.RELEASE"
 
         solrjVersion = "4.7.2"
         mongodbVersion = "2.12.5"
-        jedisVersion = "2.4.1"
+        jedisVersion = "2.7.3"
         memcachedVersion = "3.0.2"
-
-        shiroVersion = "1.2.3"
-        sitemeshVersion = "2.4.2"
-        ehcacheVersion = "2.6.9"
-        freemarkerVersion = "2.3.20"
+        quartzVersion = "2.2.1"
 
         tomcatVersion = "7.0.55"
 
@@ -76,7 +80,19 @@ subprojects {
 
         protostuffVersion = "1.0.9"
 
+        nettyVersion = "4.0.31.Final"
+
+        shiroVersion = "1.2.3"
+        sitemeshVersion = "2.4.2"
+        ehcacheVersion = "2.6.9"
+        freemarkerVersion = "2.3.20"
+
         junitVersion = "4.11"
+        hamcrestVersion = "1.3"
+        mockitoVersion = "1.9.5"
+
+        jxlVersion = "2.6.12"
+        poiVersion = "3.9"
     }
 
     dependencies {
@@ -86,21 +102,12 @@ subprojects {
 
         compile("ch.qos.logback:logback-classic:${logbackVersion}")
 
-        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
-
-        compile("com.google.guava:guava:${guavaVersion}")
-
-        compile("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
-        compile("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
-        compile("com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}")
-
-        compile("org.apache.httpcomponents:httpclient:${httpClientVersion}")
-        compile("org.apache.httpcomponents:httpmime:${httpClientVersion}")
-
         testCompile("junit:junit:${junitVersion}")
     }
 
     configurations {
         all*.exclude group: "commons-logging", module: "commons-logging"
+        all*.exclude group: "org.slf4j", module: "slf4j-log4j12"
     }
 } 
+
