--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,32 @@
+task hello<<{
+    println("${logbackVersion}")
+    println("${rootProject}")
+    println("${rootProject.projectDir}")
+    println("${projectDir}")
+}
+
+allprojects{
+
+    group = 'nomouse.java'
+    version = '1.0'
+
+    apply plugin: 'maven'
+
+    repositories {
+        mavenLocal()
+//        maven {
+//            url "http://localhost:8081/nexus/content/groups/public"
+//        }
+        jcenter()
+        mavenCentral()
+    }
+}
+
 subprojects {
 
     apply plugin: 'java'
-    apply plugin: 'eclipse'
-    apply plugin: 'idea'
-
-    repositories {
-        maven {
-            url "http://localhost:8081/nexus/content/groups/public"
-        }
-        mavenCentral()
-    }
+    //apply plugin: 'eclipse'
+    //apply plugin: 'idea'
 
     jar {
         manifest.attributes provider: 'global'
@@ -27,72 +44,6 @@ subprojects {
 
     javadoc {
         options.encoding = "UTF-8"
-    }
-
-    ext {
-        commonsLang3Version = "3.3.2"
-        commonsIoVersion = "2.4"
-        commonsCodecVersion = "1.10"
-        commonsFileuploadVersion = "1.3.1"
-        commonsCollectionVersion = "3.2.1"
-
-        slf4jVersion = "1.7.12"
-        logbackVersion = "1.1.2"
-        guavaVersion = "17.0"
-        jacksonVersion = "2.6.2"
-        httpClientVersion = "4.3.5"
-
-        mysqlJdbcVersion = "5.1.24"
-        log4jdbcVersion = "1.2"
-
-        aspectjVersion = "1.8.6"
-        springVersion = "4.1.7.RELEASE"
-        hibernateValidatorVersion = "5.1.3.Final"
-
-        springJpaVersion = "1.9.0.RELEASE"
-        hibernateVersion = "3.6.10.Final"
-
-        springMybatisVersion = "1.2.3"
-        mybatisVersion = "3.3.0"
-
-        ehcacheVersion = "2.6.9"
-        ehcacheMybatisVersion = "1.0.0"
-
-        activemqVersion = "5.7.0"
-
-        kafkaVersion = "0.8.2.1"
-
-        springSolrVersion = "1.2.4.RELEASE"
-        springMongodbVersion = "1.5.4.RELEASE"
-        springRedisVersion = "1.6.0.RELEASE"
-
-        solrjVersion = "4.7.2"
-        mongodbVersion = "2.12.5"
-        jedisVersion = "2.7.3"
-        memcachedVersion = "3.0.2"
-        quartzVersion = "2.2.1"
-
-        tomcatVersion = "7.0.55"
-
-        jerseyVersion = "2.11"
-
-        jettyVersion = "8.1.16.v20140903"
-
-        protostuffVersion = "1.0.9"
-
-        nettyVersion = "4.0.31.Final"
-
-        shiroVersion = "1.2.3"
-        sitemeshVersion = "2.4.2"
-        ehcacheVersion = "2.6.9"
-        freemarkerVersion = "2.3.20"
-
-        junitVersion = "4.11"
-        hamcrestVersion = "1.3"
-        mockitoVersion = "1.9.5"
-
-        jxlVersion = "2.6.12"
-        poiVersion = "3.9"
     }
 
     dependencies {
