--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,8 @@ guavaVersion = 17.0
 jacksonVersion = 2.6.2
 httpClientVersion = 4.3.5
 
+hsqldbVersion = 1.8.0.7
+
 mysqlJdbcVersion = 5.1.24
 log4jdbcVersion = 1.2
 
