--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ allprojects{
 
     repositories {
         mavenLocal()
-//        maven {
-//            url "http://localhost:8081/nexus/content/groups/public"
-//        }
+        maven {
+            url "http://localhost:8081/nexus/content/groups/public"
+        }
         jcenter()
         mavenCentral()
     }
