--- a/nomouse-biz/build.gradle
+++ b/nomouse-biz/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     compile("org.quartz-scheduler:quartz:${quartzVersion}")
 
+    compile("javax.validation:validation-api:1.1.0.Final")
+    compile("org.hibernate:hibernate-validator:5.2.5.Final")
+
     //compile("net.sourceforge.jexcelapi:jxl:${jxlVersion}")
     //compile("org.apache.poi:poi-ooxml:${poiVersion}")
 
